[gd_scene load_steps=20 format=3 uid="uid://bhsiske1duhng"]

[ext_resource type="Script" path="res://spacecraft/controls/PanelButton/panel_button.gd" id="1_vc5ga"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/interactables/interactable_area_button.gd" id="2_u2ppo"]
[ext_resource type="PackedScene" uid="uid://dc5t2qgmhb2nf" path="res://addons/godot-xr-tools/objects/hand_pose_area.tscn" id="3_0bbj8"]
[ext_resource type="Animation" uid="uid://cevirj0eagdrq" path="res://addons/godot-xr-tools/hands/animations/left/Sign 1.res" id="4_by2ri"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/hands/poses/hand_pose_settings.gd" id="5_pcypn"]
[ext_resource type="Animation" uid="uid://bcwx6a6mhsoj2" path="res://addons/godot-xr-tools/hands/animations/right/Sign 1.res" id="6_mhedx"]
[ext_resource type="AudioStream" uid="uid://d05c1n871jqtr" path="res://spacecraft/audio/button_click_in.wav" id="7_enp8s"]
[ext_resource type="Script" path="res://spacecraft/controls/PanelButton/click_in.gd" id="8_lw5d1"]
[ext_resource type="AudioStream" uid="uid://c8agvv4yq23pd" path="res://spacecraft/audio/button_click_out.wav" id="9_p0jsx"]
[ext_resource type="Script" path="res://spacecraft/controls/PanelButton/click_out.gd" id="10_y0fn7"]

[sub_resource type="BoxShape3D" id="BoxShape3D_glrdq"]
resource_local_to_scene = true
size = Vector3(0.12, 0.024, 0.015)

[sub_resource type="BoxMesh" id="BoxMesh_g8lmw"]
resource_local_to_scene = true
size = Vector3(0.12, 0.024, 0.015)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_acs1d"]
resource_local_to_scene = true
albedo_color = Color(0.223529, 0.223529, 0.223529, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_o3a7i"]
resource_local_to_scene = true
size = Vector3(0.02, 0.02, 0.01)

[sub_resource type="BoxMesh" id="BoxMesh_lmgeq"]
resource_local_to_scene = true
size = Vector3(0.02, 0.02, 0.01)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nl7w2"]
resource_local_to_scene = true
albedo_color = Color(0, 0.278431, 0, 1)
emission = Color(0, 0.858824, 0, 1)

[sub_resource type="Resource" id="Resource_hb5u4"]
script = ExtResource("5_pcypn")
open_pose = ExtResource("4_by2ri")
closed_pose = ExtResource("4_by2ri")

[sub_resource type="Resource" id="Resource_8sfpx"]
script = ExtResource("5_pcypn")
open_pose = ExtResource("6_mhedx")
closed_pose = ExtResource("6_mhedx")

[sub_resource type="BoxShape3D" id="BoxShape3D_7grw1"]
resource_local_to_scene = true
size = Vector3(0.025, 0.025, 0.008)

[node name="PanelButton" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.12746e-05, -0.000195928, 0.000140071)
script = ExtResource("1_vc5ga")

[node name="ButtonBase" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ButtonBase"]
shape = SubResource("BoxShape3D_glrdq")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ButtonBase"]
layers = 4
mesh = SubResource("BoxMesh_g8lmw")
surface_material_override/0 = SubResource("StandardMaterial3D_acs1d")

[node name="Label3D" type="Label3D" parent="ButtonBase"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.032, 0.000149272, 0.00868278)
pixel_size = 0.0004
horizontal_alignment = 0

[node name="Button" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Button"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.048, 0, 0.008)
shape = SubResource("BoxShape3D_o3a7i")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Button"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.048, 0, 0.008)
layers = 4
mesh = SubResource("BoxMesh_lmgeq")
surface_material_override/0 = SubResource("StandardMaterial3D_nl7w2")

[node name="XRToolsInteractableAreaButton" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.002)
collision_layer = 4194304
collision_mask = 131072
script = ExtResource("2_u2ppo")
button = NodePath("../Button")
displacement = Vector3(0, 0, -0.004)

[node name="CollisionShape3D" type="CollisionShape3D" parent="XRToolsInteractableAreaButton"]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, -0.048, 0, 0.008)
shape = SubResource("BoxShape3D_o3a7i")

[node name="HandPoseArea" parent="." instance=ExtResource("3_0bbj8")]
left_pose = SubResource("Resource_hb5u4")
right_pose = SubResource("Resource_8sfpx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HandPoseArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.048, 0, 0.0170794)
shape = SubResource("BoxShape3D_7grw1")

[node name="ClickIn" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, 0, 0)
stream = ExtResource("7_enp8s")
volume_db = 1.42858
script = ExtResource("8_lw5d1")

[node name="ClickOut" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, 0, 0)
stream = ExtResource("9_p0jsx")
script = ExtResource("10_y0fn7")

[connection signal="button_pressed" from="." to="ClickIn" method="_on_button_pressed"]
[connection signal="button_released" from="." to="ClickOut" method="_on_button_released"]
[connection signal="button_pressed" from="XRToolsInteractableAreaButton" to="." method="_on_button_pressed"]
[connection signal="button_released" from="XRToolsInteractableAreaButton" to="." method="_on_button_released"]
[connection signal="input_event" from="HandPoseArea" to="." method="_on_button_input_event"]
